--- a/style.css
+++ b/style.css
@@ -164,10 +164,20 @@ button {
     padding-block: 12.8px;
 }
 
+button:hover {
+    background-color: var(--clr-grn);
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
 a {
     color: var(--clr-white);
     text-decoration: none;
     font-weight: 600;
+}
+
+button:hover a{
+    color: var(--clr-grey-800);
 }
 
 .attribution { font-size: 0.6875rem; text-align: center; }
