updated minor things
updated the profile pic to grow on larger screens
made changes to the links section to style using the newly added `ul` element

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ textarea:not([rows]) {
 body {
     background-color: var(--clr-grey-900);
     font-family: "Inter", sans-serif;
-    font-size: clamp(0.75rem, calc(0.75rem + 4vw), 0.875rem);
+    font-size: 0.875rem;
     font-weight: 400;
     text-align: center;
     color: var(--clr-white);
@@ -118,18 +118,18 @@ main {
     align-items: center;
     justify-content: center;
     margin-top: 24px;
-    margin-inline: 16px;
+    margin-inline: 17px;
 }
 
 .profile-pic {
-    max-width: 5rem;
+    max-width: clamp(5rem, 4.3043rem + 3.4783vw, 7rem);
     height: auto;
     border-radius: 50%;
     margin-bottom: 24px;
-}
-
+  }
+  
 .profile-name {
-    font-size: clamp(1.25rem, 4vw, 1.5rem);
+    font-size: 1.5rem;
     font-weight: 700;
     color: var(--clr-white);
     margin-bottom: 10px;
@@ -145,20 +145,31 @@ main {
     color: var(--clr-white);
 }
 
-.links {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    padding-block: 18px;
-    padding-inline: 32px;
-    width: 100%;
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 24px;
+  margin-bottom: 32px;
+  margin-inline: 16px;
+  padding: 0;
+}
+
+ul li {
+  width: 100%;
+  max-width: calc(21rem);
+  margin-bottom: 16px;
+}
+
+ul li:last-child {
+  margin-bottom: 0;
 }
 
 .links a {
+    display: block;
+    width: 100%;
     background-color: var(--clr-grey-700);
     color: var(--clr-white);
     font-weight: 600;
@@ -166,7 +177,6 @@ main {
     border: none;
     border-radius: 0.3rem;
     padding-block: 14px;
-    width: 100%;
 }
 
 .links a:hover {
